feat: analytics dashboard, deployment config, and pre-launch fixes
- Add Recharts analytics dashboard to AdminDashboard (scan trends + activity log)
- Fix Landing Page navbar smooth scroll for HashRouter
- Fix Deep Scan button color to match Soteria brand
- Add Dockerfile with git dep, dynamic PORT, production CMD
- Add .dockerignore for lean builds
- Add frontend/vercel.json with SPA rewrites + security headers
- Update frontend/.env.example with all required env vars
- Update .gitignore to exclude .vite/, .DS_Store, logs, databases
- Add recharts dependency to package.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,26 @@
 # Ignore frontend modules
 frontend/node_modules/
 frontend/dist/
+frontend/.vite/
 
 # Ignore backend modules
 backend/__pycache__/
 backend/venv/
 backend/.venv/
 backend/*.pyc
+__pycache__/
+*.pyc
 
 # Ignore environment variables
 .env
 frontend/.env
 backend/.env
+.vercel
+.env*.local
+
+# OS / IDE junk
+.DS_Store
+*.log
+
+# Local databases
+*.db
