--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,14 @@
-# The URL of your Render Backend (e.g., https://your-app.onrender.com)
+# ─── Soteria Frontend Environment Variables ───
+# Copy this file to .env.local for local development
+# Set these directly in Vercel Dashboard > Project Settings > Environment Variables for production
+
+# Your Supabase project URL (found in: supabase.com > Project Settings > API)
+VITE_SUPABASE_URL=https://your-project-id.supabase.co
+
+# Your Supabase anon/public key (found in: supabase.com > Project Settings > API)
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# URL of your deployed backend (Render, Railway, etc.)
+# For local dev: http://localhost:5001
+# For production: https://your-app.onrender.com
 VITE_API_URL=http://localhost:5001
