cleanup: remove dead code, stale artifacts, and Next.js remnants
Deleted:
- frontend/src/pages/Home.tsx (dead page, replaced by DesktopHome)
- frontend/src/next-themes.tsx (Next.js theme shim)
- frontend/src/components/next/ (12 Next.js compatibility shims)
- frontend/src/types/next.d.ts, styled-jsx.d.ts
- frontend/src/hooks/use-media-query.tsx (unused)
- frontend/{GITHUB_SOURCE_CODE.md, backend-example.py, pnpm-lock.yaml, README.md, vite.config.d.ts}
- Root: train.py, watchData.py, process_logos.py, dev.log, preview.log, package-lock.json
- middleware: flask_debug*.log, test_*.{py,pdf,json} (7 test artifacts)
- All .DS_Store files

Modified:
- main.tsx: removed next-themes, set dark mode directly
- sonner.tsx: removed next-themes import, hardcoded dark theme
- modules.d.ts: removed all Next.js module declarations
- index.html: favicon changed to soteria-logo.png, title simplified
- .gitignore: extended with patterns to prevent stale files returning

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 frontend/node_modules/
 frontend/dist/
 frontend/.vite/
+frontend/.vercel/
 
 # Ignore backend modules
 backend/__pycache__/
@@ -13,10 +14,9 @@ __pycache__/
 
 # Ignore environment variables
 .env
+.env*.local
 frontend/.env
 backend/.env
-.vercel
-.env*.local
 
 # OS / IDE junk
 .DS_Store
@@ -24,3 +24,14 @@ backend/.env
 
 # Local databases
 *.db
+
+# Test artifacts
+middleware/test_*.json
+middleware/test_*.py
+middleware/test_*.pdf
+
+# Build artifacts
+frontend/vite.config.d.ts
+frontend/pnpm-lock.yaml
+.vercel/
+LOGO/
