--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "@supabase/supabase-js": "^2.97.0",
     "@tailwindcss/vite": "^4.1.4",
     "@typescript/native-preview": "7.0.0-dev.20250522.2",
+    "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
